# sl8

./: .sl8.json  CLI_HELP.md  Cargo.toml  README.md
.component-template/: Makefile.hbs
.component-template/scripts/: build.sh.hbs  deploy.sh.hbs  run.sh.hbs  test.sh.hbs
.github/workflows/: release-cli-tool.yml
.partials/: bash_header.hbs
.pipeline-template/: cd.azure-pipeline.yml.hbs  ci.azure-pipeline.yml.hbs
.repo-template/: Makefile.hbs  README.md.hbs
.repo-template/.code-workspaces/: all.code-workspace.hbs  projects-only.code-workspace.hbs  wiki-only.code-workspace.hbs
.repo-template/.devcontainer/: README.md.hbs
.repo-template/.devops/: README.md.hbs
.repo-template/.devops/pipelines/: README.md.hbs
.repo-template/.devops/pipelines/variables/: common.yml.hbs
.repo-template/components/: README.md.hbs
.repo-template/scripts/utils/: dev-env.sh.hbs
.repo-template/wiki/: README.md.hbs
src/: build.rs  cli.rs  generate.rs  init.rs  main.rs  models.rs  project.rs
src/models/: sl8.rs
test/: .sl8.json
