[package]
name = "sl8"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
handlebars = "4.3.6"
include_dir = { version = "0.7.3", features = ["glob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.16.1"

[build-dependencies]
clap = "4.1.6"
clap-markdown = "0.1.3"
clap_mangen = "0.2.9"



